Fixed alignment of pager items

--- a/css/postlist.css
+++ b/css/postlist.css
@@ -45,6 +45,7 @@
 }
 
 .pager li {
+	display: flex;
 	height: fit-content;
 }
 
